# memenote

./: .coverage  .dockerignore  .env.example  Dockerfile  README.md  README_zh.md  alembic.ini  compose.traefik.yaml  compose.yaml  docker-compose.dev.test.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 162bed11eac8_initial_migration.py  3098dcfbb218_initial_migration.py  8f46a0f4536d_initial_migration.py  ba1166309d3f_initial_migration.py  c820fbd1d4fb_initial_migration.py  d90da408d75f_initial_migration.py  f538ccda0a95_add_note_content_unique_constraint.py
app/: main.py
app/core/: celery_app.py  config.py  database.py  dependencies.py  logging.py  redis_db.py  s3_client.py  s3_client.py.bak  security.py  user_manage.py
app/graphql/: queries.py  schema.py
app/models/: models.py
app/repository/: attachment_repo.py  note_repo.py  reminder_repo.py  tag_repo.py  todo_repo.py  user_repo.py
app/routes/: attachment_routes.py  note_routes.py  public_routes.py  reminder_routes.py  sse.py  tag_routes.py  todo_routes.py  user_routes.py  ws.py  ws.py.bak
app/schemas/: param_schemas.py  schemas.py
app/service/: attachment_service.py  note_service.py  reminder_service.py  tag_service.py  todo_service.py  user_service.py
app/tasks/: mail_task.py  reminder.py  reminder_task.py
app/utils/: mail.py
data/: memenote.sqlite3
tests/: conftest.py  helper.py  test_health_check.py
tests/api/: test_auth.py  test_healthcheck.py  test_notes.py  test_reminders.py  test_sse.py  test_tddos.py  test_user.py
tests/core/: test_security.py
tests/repository/: conftest.py  test_note_repo.py  test_reminder_repo.py  test_todo_repo.py  test_user_repo.py
tests/tasks/: test_celery_tasks.py
traefik/: traefik.yaml
(+4 files in other folders)
