[project]
name = "memenote"
version = "0.1.0"
description = "a Fastapi REST API for memenote"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "boto3>=1.37.28",
    "celery>=5.4.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "redis>=5.2.1",
    "resend>=2.7.0",
    "sqlalchemy>=2.0.38",
    "sse-starlette>=2.2.1",
]
